added plays inline

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="video">
-      <video controls loop autoplay muted width="300">
+      <video controls loop autoplay muted playsinline width="300">
         <source src="./assets/dom-swing-1.mp4" />
       </video>
     </div>
